# autonomous_ackermann_model_on_gazebo

vehicle_analysis/: CMakeLists.txt  package.xml
vehicle_analysis/data/: formation_0.csv
vehicle_analysis/scripts/: segment_analysis.py  visualize_performance.py
vehicle_analysis/src/: data_logger_node.cpp
vehicle_control/: CMakeLists.txt  package.xml
vehicle_control/launch/: bring_up_cntrl.launch.py  formation_lap.launch.py  racing_lap.launch.py  segment_racing.launch.py
vehicle_control/src/: formation_lap_node.cpp  lane_controller_node.cpp  mission_manager_node.cpp  racing_node.cpp  segment_racing_node.cpp
vehicle_navigation/: CMakeLists.txt  package.xml
vehicle_navigation/config/: amcl_params.yaml  nav2_params_ackermann.yaml  nav2_racing_params.yaml  rviz_config.rviz  slam_toolbox_params.yaml
vehicle_navigation/launch/: bring_up_nav.launch.py  bring_up_nav_formation.launch.py  bring_up_nav_racing.launch.py
vehicle_navigation/maps/: formation_map.pgm
vehicle_perception/: CMakeLists.txt  package.xml
vehicle_perception/launch/: aruco_detector.launch.py  bring_up_perception.launch.py
vehicle_perception/src/: aruco_detector_node.cpp  lane_follow_node.cpp
vehicle_sim/: CMakeLists.txt  package.xml
vehicle_sim/launch/: bring_up.launch.py  robot_state_publisher.launch.py  spawn_entity.launch.py  spawn_obstacles.launch.py
vehicle_sim/models/map/: track.dae  track_super.dae  track_superV5.dae
vehicle_sim/models/static_box/: model.config  model.sdf
vehicle_sim/urdf/: ackermann.gazebo.xacro  ackermann.urdf.xacro
vehicle_sim/worlds/: empty_world.sdf  empty_world.world
